fix top page portion

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
                     <div>header link three</div>
                 </div>  
             </div>
+            <div class="container">
+                <div class="hero">
+                    <div class="awesome">This website is awesome</div>
+                    <div class="awesomesub">
+                        This website has some subtext that goes under the main title. 
+                        It's a smaller font and the color is lower contrast
+                    </div>
+                    <button class="top">Sign up</button>
+                </div>
+                <img src="tonguecat.jpg" class="image" alt="cat with tongue">
+            </div>
         </div>
-        
+    <div class="middle">
+        <div class="midheader">Some random information</div>
+    </div>
     </body>
 </html>
