start middle page header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,25 @@
             </div>
         </div>
     <div class="middle">
-        <div class="midheader">Some random information</div>
+        <div class="midheader">Some random information.</div>
+        <div class="infobox">
+            <div class="info">
+                <img src="#" alt="img 1">
+                <div class="infosub">subtext</div>
+            </div>
+            <div class="info">
+                <img src="#" alt="img 2">
+                <div class="infosub">subtext</div>
+            </div>
+            <div class="info">
+                <img src="#" alt="img 1">
+                <div class="infosub">subtext</div>
+            </div>
+            <div class="info">
+                <img src="#" alt="img 2">
+                <div class="infosub">subtext</div>
+            </div>
+        </div>
     </div>
     </body>
 </html>
