assign width to first cat img to prevent shrinkage and made beg section flex wrap

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <button class="top">Sign up</button>
                 </div>
-                <img src="tonguecat.jpg" class="image" alt="cat with tongue">
+                <img src="https://images.pexels.com/photos/6947521/pexels-photo-6947521.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" class="image" alt="cat wonder">
             </div>
         </div>
     <div class="middle">
@@ -32,21 +32,31 @@
         <div class="infobox">
             <div class="info">
                 <img src="#" alt="img 1">
-                <div class="infosub">subtext</div>
+                <div>subtext</div>
             </div>
             <div class="info">
                 <img src="#" alt="img 2">
-                <div class="infosub">subtext</div>
+                <div>subtext</div>
             </div>
             <div class="info">
                 <img src="#" alt="img 1">
-                <div class="infosub">subtext</div>
+                <div>subtext</div>
             </div>
             <div class="info">
                 <img src="#" alt="img 2">
-                <div class="infosub">subtext</div>
+                <div>subtext</div>
             </div>
+        
         </div>
+    </div>
+    <div class="quotecontainer"> 
+        <div class="quote">
+            Cats are projected to be the most dominant species on earth by year 2056. 
+            Given their physical agility and mental prowess, felines are capable of dominating a fragile 
+            society. Research shows that modern domesticated cats have collected over 500 years of anthropological  
+            data and are beyond well prepared for their eventual domination.
+        </div>
+        <div class="scientist">-Erwin Schrödinger</div>
     </div>
     </body>
 </html>
