add info images

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="midheader">Some random information.</div>
         <div class="infobox">
             <div class="info">
-                <img src="#" alt="img 1">
+                <img src="cats/orangecat.jpg" alt="orange cat">
+                <div>hrhotwrtowirh</div>
+            </div>
+            <div class="info">
+                <img src="cats/nina.jpg" alt="drunk nina">
                 <div>subtext</div>
             </div>
             <div class="info">
-                <img src="#" alt="img 2">
+                <img src="cats/sunniescat.jpg" alt="img 1">
                 <div>subtext</div>
             </div>
             <div class="info">
-                <img src="#" alt="img 1">
-                <div>subtext</div>
-            </div>
-            <div class="info">
-                <img src="#" alt="img 2">
+                <img src="cats/shrekcat.jpg" alt="img 2">
                 <div>subtext</div>
             </div>
         
@@ -57,6 +57,15 @@
             data and are beyond well prepared for their eventual domination.
         </div>
         <div class="scientist">-Erwin Schrödinger</div>
+    </div>
+    <div class="lastcontainer"> 
+        <div class="bigblue">
+            <div class="bbtext">
+                <div class="action">Call to action! Sign up now!</div>
+                <div class="actionsub">Sign our petition to prevent cat world domination! Be part of the change!</div>
+            </div>
+            <div class="bottombutton">Sign up</div>
+        </div>
     </div>
     </body>
 </html>
