--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
                 <div class="hero">
                     <div class="awesome">This website is awesome</div>
                     <div class="awesomesub">
-                        This website has some subtext that goes under the main title. 
-                        It's a smaller font and the color is lower contrast
+                        Hi Sean Young I think you're so sexy and I hope you're reading this. 
                     </div>
-                    <button class="top">Sign up</button>
+                    <button class="top"><a href="https://media.istockphoto.com/id/1168460296/photo/old-grandma-in-a-white-black-striped-jacket.jpg?s=612x612&w=0&k=20&c=Cyiwqzc_zIwH5qB8vFBgcFVpqoXkYFrWt37X3_CDx3k=">Sign up</button>
                 </div>
                 <img src="https://images.pexels.com/photos/6947521/pexels-photo-6947521.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" class="image" alt="cat wonder">
             </div>
@@ -51,7 +50,7 @@
     </div>
     <div class="quotecontainer"> 
         <div class="quote">
-            Cats are projected to be the most dominant species on earth by year 2056. 
+            Cats are projected to be the most dominant mammalian species on earth by year 2056. 
             Given their physical agility and mental prowess, felines are capable of dominating a fragile 
             society. Research shows that modern domesticated cats have collected over 500 years of anthropological  
             data and are beyond well prepared for their eventual domination.
