add closing tag to link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="awesomesub">
                         Hi Sean Young I think you're so sexy and I hope you're reading this. 
                     </div>
-                    <button class="top"><a href="https://media.istockphoto.com/id/1168460296/photo/old-grandma-in-a-white-black-striped-jacket.jpg?s=612x612&w=0&k=20&c=Cyiwqzc_zIwH5qB8vFBgcFVpqoXkYFrWt37X3_CDx3k=">Sign up</button>
+                    <button class="top"><a href="https://media.istockphoto.com/id/1168460296/photo/old-grandma-in-a-white-black-striped-jacket.jpg?s=612x612&w=0&k=20&c=Cyiwqzc_zIwH5qB8vFBgcFVpqoXkYFrWt37X3_CDx3k=">Sign up</a></button>
                 </div>
                 <img src="https://images.pexels.com/photos/6947521/pexels-photo-6947521.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" class="image" alt="cat wonder">
             </div>
